refact : 계산 로직 유틸로 분리